--- a/Virginia-Kitten-Named-Marni-Dies-After-Suspected-Poisoning-by-Republican-Activist-Sparking-Outrage-and-Political-Backlash.html
+++ b/Virginia-Kitten-Named-Marni-Dies-After-Suspected-Poisoning-by-Republican-Activist-Sparking-Outrage-and-Political-Backlash.html
@@ -225,7 +225,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                             </div>
                             <div class="row singleBylineRow">
                                 <div class="col-xxl-8 col-xl-8 col-lg-7 col-md-12 col-sm-12 col-12">
-                                    <h6 class="singleBylineContainer"><span  class="singleByline">By: </span><span class="singleBylineAuthor"><a href="../../../../author/jennifer-shutt/index.html" title="Posts by Jennifer Shutt" class="author url fn" rel="author">Jennifer Shutt</a> </span><span class="singleByline">- May 09, 2025</span><span class="singleByline singleBylineSpacer">07:15 Am</span></h6>
+                                    <h6 class="singleBylineContainer"><span  class="singleByline">By: </span><span class="singleBylineAuthor"><a href="../../../../author/jennifer-shutt/index.html" title="Posts by Jennifer Shutt" class="author url fn" rel="author">Jennifer Shutt</a> </span><span class="singleByline">- May 09, 2025</span><span class="singleByline singleBylineSpacer">12:30 Am</span></h6>
                                 </div>
 
                                 <div class="col-xxl-4 col-xl-4 col-lg-5 col-md-12 col-sm-12 col-12 singleSocialShares">
@@ -258,7 +258,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                             <div class="row singleFeatImageRow">
                                 <div class="col-12 px-0">
                                                                             <figure class="singleFeaturedImage"> <a href="index.html"><img width="1536" height="894" src="moo.png" class="attachment-1536x1536 size-1536x1536 wp-post-image" alt="" decoding="async" fetchpriority="high" srcset="moo.png 1536w, moo.png 300w, moo.png 1024w, moo.png 768w, moo.png 2048w" sizes="(max-width: 1536px) 100vw, 1536px" /></a> </figure>
-                                        <p class="singleImageCaption"><i class="fas fa-camera"></i> Marni, The Poisoned Kitten Captured Over The Months By Her Family</p>
+                                        <p class="singleImageCaption"><i class="fas fa-camera"></i> Marni The Kitten ( Left & Right ) And The Republican Party Activists (Middle) Captured Carrying Marni Back To The Lawn</p>
                                                                     </div>
                             </div>
                             <div class="row">
